[build-system]
requires = [
    "setuptools>=77",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "katgpucbf"
description = "GPU-accelerated correlator for the MeerKAT Extension"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "MeerKAT Extension CBF team", email = "gpucbf@sarao.ac.za"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "aioconsole==0.8.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiokatcp==2.2.0",
    "aiomonitor==0.7.1",
    "aiosignal==1.4.0",
    "alabaster==1.0.0",
    "appdirs==1.4.4",
    "astropy==7.1.0",
    "astropy-iers-data==0.2025.9.29.0.35.48",
    "asttokens==3.0.0",
    "async-solipsism==0.8",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "baseband==4.3.0",
    "certifi==2025.8.3",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "coverage==7.10.7",
    "dask==2025.9.1",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "docutils==0.21.2",
    "execnet==2.1.1",
    "executing==2.2.1",
    "filelock==3.19.1",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "hiredis==3.2.1",
    "identify==2.6.14",
    "idna==3.10",
    "imagesize==1.4.1",
    "iniconfig==2.1.0",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "janus==2.0.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "katcbf-vlbi-resample==0.3",
    "katcp-codec==0.2.0",
    "katsdpservices[aiomonitor]==1.4",
    "katsdpsigproc==1.10.0",
    "katsdptelstate==1.0.0",
    "latexcodec==3.0.1",
    "llvmlite==0.45.0",
    "locket==1.0.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "msgpack==1.1.1",
    "multidict==6.6.4",
    "netifaces==0.11.0",
    "nodeenv==1.9.1",
    "numba==0.62.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "partd==1.4.2",
    "pexpect==4.9.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "pre-commit==4.3.0",
    "prometheus-async[aiohttp]==25.1.0",
    "prometheus-client==0.23.1", # First version to auto-append _total to counter names
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pybtex==0.25.1",
    "pybtex-docutils==1.0.3",
    "pycuda==2025.1.2",
    "pyerfa==2.0.1.5",
    "pygelf==0.4.3",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest-mock==3.15.1",
    "pytest-xdist==3.8.0",
    "python-dateutil==2.9.0.post0",
    "pytools==2025.2.4",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==6.4.0",
    "requests==2.32.5",
    "roman-numerals-py==3.1.0",
    "scipy==1.16.2",
    "siphash24==1.8",
    "six==1.17.0",
    "snowballstemmer==3.0.1",
    "spead2==4.4.0",
    "sphinx==8.2.3",
    "sphinx-mathjax-offline==0.0.2",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-bibtex==2.6.5",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-tikz==0.4.20",
    "stack-data==0.6.3",
    "telnetlib3==2.0.7",
    "terminaltables==3.1.10",
    "toolz==1.0.0",
    "trafaret==2.1.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.9.8",
    "virtualenv==20.34.0",
    "wcwidth==0.2.14",
    "wrapt==1.17.3",
    "xarray==2025.9.0",
    "yarl==1.20.1",
]
requires-python = ">=3.12"
dynamic = ["version"]  # Provided by setuptools_scm

[project.optional-dependencies]
vkgdr = [
    "vkgdr",
]

gpu = [
    "katsdpsigproc[CUDA]",
    "vkgdr",
]

doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-tikz",
    "sphinx-mathjax-offline",
]

test = [
    "katsdpsigproc[CUDA]",
    "async-solipsism>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-custom_exit_code",
    "pytest-mock",
]

qualification = [
    "async-timeout",
    "docutils>=0.18",
    "matplotlib",
    "prometheus-api-client",
    "pylatex",
    "pytest",
    "pytest-asyncio",
    "pytest-check>=1.3,<2.2.3",  # Upper bound due to https://github.com/okken/pytest-check/issues/173
    "pytest-custom_exit_code",
    "pytest-reportlog",
]

copy-mk = [
    "katportalclient",
]

[project.scripts]
fgpu = "katgpucbf.fgpu.main:main"
xbgpu = "katgpucbf.xbgpu.main:main"
vgpu = "katgpucbf.vgpu.main:main"
dsim = "katgpucbf.dsim.main:main"
fsim = "katgpucbf.fsim.main:main"

[project.urls]
Homepage = "https://github.com/ska-sa/katgpucbf"
Documentation = "https://katgpucbf.readthedocs.io"

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["*.ipynb"]
[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "RUF100",  # Unnecessary noqa directives
]
extend-ignore = ["D105", "D107"]  # docstrings for magic methods
[tool.ruff.lint.extend-per-file-ignores]
"scratch/**/*.py" = ["D"]  # Don't fuss with docstrings in scratch/
[tool.ruff.lint.pydocstyle]
convention = "numpy"
property-decorators = ["pytest.fixture"]
[tool.ruff.lint.isort]
known-local-folder = ["benchmark_tools", "noisy_search", "remote", "sighandler"]

[tool.pytest.ini_options]
testpaths = "test"
addopts = "--cov-context=test --cov-report html --import-mode=prepend"
markers = ["mask_timestamp", "use_vkgdr", "cmdline_args", "spectra_per_heap", "slow"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = [
    "katgpucbf",
    "test/",
]

[tool.coverage.html]
show_contexts = true

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
exclude_lines = [
    '#\s*(pragma|PRAGMA)[:\s]?\s*(no|NO)\s*(cover|COVER)',  # Default from coverage
    '@(?:numba\.)?(?:njit|cfunc)',  # Compiled so coverage can't see the code being executed
    '@(abc\.)?abstractmethod',
]
