[metadata]
name = katgpucbf
description = GPU-accelerator correlator for the MeerKAT Extension
author = MeerKAT CBF team
author_email = cbf@ska.ac.za
url = https://github.com/ska-sa/katgpucbf
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiokatcp
    katsdpservices
    katsdpsigproc[CUDA]>=1.4
    katsdptelstate
    numpy
    spead2>=3.7.0
    xarray
python_requires = >=3.8

[options.extras_require]
gdrcopy = gdrcopy
test =
    async-timeout
    numba
    prometheus-async[aiohttp]
    prometheus-client>=0.4  # First version to auto-append _total to counter names
    pytest
    pytest-asyncio
    pytest-mock

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fgpu = katgpucbf.fgpu.main:main
    xbgpu = katgpucbf.xbgpu.main:main
    dsim = katgpucbf.dsim.main:main

[options.package_data]
* = kernels/*.mako, kernels/*.cu, */*.pyi
