[metadata]
name = katgpucbf
description = GPU-accelerator correlator for the MeerKAT Extension
author = SARAO DSP team
author_email = cbf@ska.ac.za
url = https://github.com/ska-sa/katgpucbf
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiokatcp>=1.9.0
    dask
    katsdpservices[aiomonitor]
    katsdpsigproc>=1.8.0
    katsdptelstate
    numba
    numpy
    prometheus-async[aiohttp]
    prometheus-client>=0.4  # First version to auto-append _total to counter names
    pyparsing>=3.0.0
    scipy
    spead2>=4.3.1
    xarray
python_requires = >=3.10

[options.extras_require]
vkgdr = vkgdr

gpu =
    katsdpsigproc[CUDA]
    vkgdr

doc =
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-bibtex
    sphinxcontrib-tikz
    sphinx-mathjax-offline

test =
    katsdpsigproc[CUDA]
    async-solipsism
    async-timeout
    pytest==7.4.3
    pytest-asyncio>=0.18,<0.22
    pytest-custom_exit_code
    pytest-mock

qualification =
    async-timeout
    docutils>=0.18
    matplotlib
    prometheus-api-client
    pylatex
    pytest
    pytest-asyncio
    pytest-check>=1.3
    pytest-custom_exit_code
    pytest-reportlog

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fgpu = katgpucbf.fgpu.main:main
    xbgpu = katgpucbf.xbgpu.main:main
    dsim = katgpucbf.dsim.main:main
    fsim = katgpucbf.fsim.main:main

[options.package_data]
* = kernels/*.mako, kernels/*.cu, */*.pyi, py.typed
