[build-system]
requires = [
	"setuptools>=45",
	"wheel",
	"setuptools_scm[toml]>=6.0",
	"jinja2==2.10.1",
	"pycparser==2.19",
	"pybind11==2.5.0",
]

[tool.setuptools_scm]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude ='''
/(
		  \.eggs	# exclude a few common directories
		| \.git		# in the root of the project
		| \.hg
		| \.mypy_cache
		| \.nox
		| \.tox
		| \.venv
		| _build
		| buck-out
		| build
		| dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["3rdparty/*"]
