[build-system]
# 1. setuptools and wheel are required to install all python packages.
# 2. pybind11 is used for wrapping C++ functions in python. Required to be here so it is available when pip install is run.
# 3. jinja2 is required to run bootstrap.sh when installing the spead2 submodule
# 4. pycparser is required to run bootstrap.sh when installing the spead2 submodule
# TODO: It may be worth combining the requirements here and in requirements.txt into one location.
requires = ["setuptools", "wheel", "pybind11==2.6.0", "jinja2==2.10.1", "pycparser"]

[tool.black]
# Configuration for Black, the tools used for auto-formatting the python code in katxgpu
line-length = 120
include = '\.pyi?$'
exclude ='''
/(
		  \.eggs	# exclude a few common directories
		| \.git		# in the root of the project
		| \.hg
		| \.mypy_cache
		| \.nox
		| \.tox
		| \.venv
		| _build
		| buck-out
		| build
		| dist
)/
'''